My frisMy first lab assignment created using Google Colab!

--- a/My_First_Notebook.ipynb
+++ b/My_First_Notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZqgXx5CwCPo4hDsLpG+6K",
+      "authorship_tag": "ABX9TyO4D4tVHIPwDVj8cx1xm5rC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,15 +27,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "XRsFwGVrRt2N"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# My First Jupyter Notebook\n",
@@ -43,9 +34,12 @@
         "This notebook was created using Google Colab.\n",
         "\n",
         "# Objectives\n",
-        "- Practice Markdown formatting\n",
-        "- Run Python code\n",
-        "- Understand notebook structure"
+        "In this lab, I explored the following concepts:\n",
+        "\n",
+        "1. Creating and formatting Markdown cells\n",
+        "2. Writing and executing Python code\n",
+        "3. Understanding how Jupyter Notebooks work\n",
+        "4. Connecting Google Colab to GitHub"
       ],
       "metadata": {
         "id": "PHWsic49Sezp"
@@ -61,15 +55,42 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Uu1h4yu_SrRL",
-        "outputId": "224ab8bc-2278-4070-c4b8-cf8c9292b285"
+        "outputId": "963d0c01-f58d-4d31-ba09-6f8c3a13ba03"
       },
-      "execution_count": 1,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Hello, World!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = \"Anashrah Adil\"\n",
+        "course = \"Comp Vision-Artificial Intel-22600ITAI-1378\"\n",
+        "print(name)\n",
+        "print(course)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "844BKsn2VIcA",
+        "outputId": "b3eb87e9-622c-4c43-92b9-e595529b5276"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Anashrah Adil\n",
+            "Comp Vision-Artificial Intel-22600ITAI-1378\n"
           ]
         }
       ]
@@ -84,9 +105,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0OjOjYO8TFvJ",
-        "outputId": "58bede7c-6ec4-4a06-922d-6129e0232d32"
+        "outputId": "dce37c11-afd6-4a55-fe89-ba0061ef39c4"
       },
-      "execution_count": 2,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,9 +130,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ND52l73CTSkY",
-        "outputId": "ade643f4-92fb-43c3-e1b2-6eff73acfa8c"
+        "outputId": "e4602995-c226-4fd6-b6df-ecfbb9cc7f14"
       },
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,15 +142,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "5o0nAs85TUSc"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
